# IMS-Projekt

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
src/: FFT.cpp  FFT.hpp  fftFilters.hpp  fft_filters.hpp  helpers.hpp  image_processing.hpp  main.cpp  wavelets.hpp
